arreglando las putianotaciones
arreglando las anotaciones qa ...
