# SubastasWeb/routes/api.php
@@ -7,13 +7,16 @@ use App\Http\Controllers\SubastaController;
 use App\Http\Controllers\LoteController;
 use App\Http\Controllers\ArticuloController;
 use App\Http\Controllers\CategoriaController;
+use App\Http\Controllers\FacturaController;
 
 //Route::apiResource('casaremates', CasaRemateController::class);
 
 //Route::apiResource('subasta', SubastaController::class);
 
-//Route::apiResource('articulos', ArticuloController::class);
+Route::apiResource('articulos', ArticuloController::class);
 
 Route::apiResource('lotes', LoteController::class);
 
 Route::apiResource('categorias', CategoriaController::class);
+
+Route::apiResource('facturas', FacturaController::class);
